# clawctl

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  cli.py  docker-compose.yml  openclaw_manager.py  pyproject.toml  requirements.txt  setup.py
scripts/: install.sh
